--- a/css/projects.css
+++ b/css/projects.css
@@ -108,3 +108,85 @@
 }
 
 /*  End the animation*/
+
+/* Start Accordion style */
+.tab {
+	position: relative;
+}
+
+.tab input {
+	position: absolute;
+	opacity: 0;
+	z-index: -1;
+}
+
+.tab__content {
+	max-height: 0;
+	overflow: hidden;
+	transform: translate(6%, 0%);
+}
+
+.tab input:checked~.tab__content {
+	max-height: 100%;
+}
+
+/* Visual styles */
+.tab__label,
+.tab__close {
+	display: flex;
+	color: white;
+	cursor: pointer;
+}
+
+.tab__label {
+	justify-content: space-between;
+	padding: 1rem;
+	background: #212121 !important;
+	border-radius: 6px !important;
+
+
+}
+
+.tab__label::after {
+	content: "\276F";
+	width: 1em;
+	height: 1em;
+	text-align: center;
+	transform: rotate(90deg);
+	transition: all 0.35s;
+}
+
+.tab input:checked+.tab__label::after {
+	transform: rotate(270deg);
+}
+
+.tab__content p {
+	margin: 0;
+	padding: 1rem;
+}
+
+.tab__close {
+	justify-content: flex-end;
+	padding: 0.5rem 1rem;
+	font-size: 0.75rem;
+	position: absolute;
+	top: -49px;
+	right: 41px;
+}
+
+/* Arrow animation */
+.tab input:not(:checked)+.tab__label:hover::after {
+	animation: bounce .5s infinite;
+}
+
+@keyframes bounce {
+	25% {
+		transform: rotate(90deg) translate(.25rem);
+	}
+
+	75% {
+		transform: rotate(90deg) translate(-.25rem);
+	}
+}
+
+/* End Accordion style */
